# Lemma

./: .gitignore  404.html  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  MAINTAINER_SETUP.md  README.md  ROADMAP.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  chore.md  config.yml  feature_request.md  rfc.md
.github/workflows/: ci.yml  docs.yml  release.yml  scorecard.yml  security.yml
agent/: Dockerfile  README.md  go.mod  main.go  main_test.go
agent/deploy/: k8s-sidecar.yaml.tmpl  launcher.sh.tmpl  lemma-agent.service.tmpl
brand/: guidelines.md
brand/marketing/: architecture.mmd  comparison.md
concepts/: index.html
concepts/ai/: index.html
contributing/: index.html
docs/: index.md
docs/concepts/: ai.md  index.md
docs/contributing/: index.md
docs/getting-started/: index.md
docs/guides/: build-your-first-connector.md  ci-cd-integration.md  graph-queries.md  index.md  rag-evaluation.md
docs/reference/: ai-system-card.md  index.md
getting-started/: index.html
guides/: index.html
guides/build-your-first-connector/: index.html
guides/ci-cd-integration/: index.html
guides/graph-queries/: index.html
guides/rag-evaluation/: index.html
reference/: index.html
reference/ai-system-card/: index.html
search/: search_index.json
src/lemma/: __init__.py  cli.py
stylesheets/: extra.css
tests/: conftest.py
tests/commands/: test_agent.py  test_ai_audit.py  test_ai_bom.py  test_check.py  test_connector.py  test_control_plane.py  test_evidence.py  test_framework.py  test_graph_cli.py  test_harmonize.py  test_init.py  test_map.py  test_person.py  test_query.py  test_resource.py  test_risk.py  test_scope.py  test_status.py  test_system_card.py  test_validate.py
tests/evaluation/: conftest.py  corpus_nist_csf_2_0.yaml  test_eval_gating.py  test_rag_precision.py
tests/fixtures/: invalid_catalog.json  valid_catalog.json
tests/integration/: test_agent_verify.py  test_ai_trace_integration.py  test_e2e_workflow.py  (+4 more)
tools/: check_cli_docs.py
(+217 files in other folders)
