[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lemma-grc"
version = "0.1.0"
description = "Provable Compliance. No Black Boxes. An open-source, AI-native GRC platform."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "Josh Jones", email = "contact@joshdoes.it" },
]
keywords = ["grc", "compliance", "oscal", "security", "audit"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "pydantic>=2.0",
    "typer>=0.12",
    "rich>=13.0",
    "pyyaml>=6.0",
    "chromadb>=0.5",
    "httpx>=0.27",
    "networkx>=3.0",
    "jsonschema>=4.0",
    "cryptography>=42.0",
    "boto3>=1.34",
    "kubernetes>=28.0",
    "google-cloud-asset>=3.20",
    "azure-identity>=1.15",
    "azure-mgmt-resourcegraph>=8.0",
    "pyvmomi>=8.0",
    "python-hcl2>=4.0",
]

[project.optional-dependencies]
ingest = [
    "docling>=2.0",
    "pandas>=2.0",
    "openpyxl>=3.1",
]
cloud = [
    "openai>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "openpyxl>=3.1",
]

[project.scripts]
lemma = "lemma.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/lemma"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--strict-markers -v"
markers = [
    "eval: RAG evaluation tests requiring Ollama; skipped by default, run with --run-eval",
]

[tool.coverage.run]
source = ["lemma"]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["lemma"]
